# foodgram-st

./: .gitignore  README.md  justfile
.github/workflows/: docker-publish.yml  lint.yml
backend/: .env.example  Dockerfile  flake.nix  pyproject.toml  requirements.txt  run.sh
backend/api/: exceptions.py  fields.py  filters.py  permissions.py  serializers.py  urls.py  utils.py  validators.py  views.py
backend/data/: ingredients.json  test_data.json
backend/foodgram/: settings.py  urls.py
backend/recipes/: admin.py  models.py  urls.py  validators.py  views.py
backend/recipes/management/commands/: load_ingredients.py
backend/recipes/migrations/: 0001_initial.py  0002_alter_ingredient_name_delete_shortlink.py  0002_recipe.py  0003_shortlink_favorite_recipeingredient_shoppingcart.py
backend/users/: admin.py  models.py  tests.py
backend/users/migrations/: 0001_initial.py  0002_subscription.py  0003_alter_subscription_options_alter_user_options_and_more.py
docs/: openapi-schema.yml  redoc.html
frontend/: Dockerfile
frontend/src/pages/recipe-create/: index.js
frontend/src/pages/recipe-edit/: index.js
frontend/src/pages/single-card/ingredients/: index.js
infra/: create_admin.sh  docker-compose.local.yml  docker-compose.yml  env.example  nginx.conf
postman_collection/: README.md  foodgram.postman_collection.json
